modals collapse height issue resolved

--- a/src/Proposals/Modal/style.module.scss
+++ b/src/Proposals/Modal/style.module.scss
@@ -5,7 +5,7 @@
 
 }
 .modalContent {
- margin: 48rem 0 30rem;
+ margin: 48rem 0 25rem;
  width:420px;
 }
 
