--- a/src/Shared/Modal/style.module.scss
+++ b/src/Shared/Modal/style.module.scss
@@ -24,7 +24,7 @@
   position: relative;
   padding: 60rem 50rem 50rem;
   margin: 50rem 0;
-  max-width: 488px;
+  
 }
 
 .stakeModal {
